MCKIN-14914 Fixed hhorizontal scroll (#3679)

--- a/static_v2/scss/pages/_login.scss
+++ b/static_v2/scss/pages/_login.scss
@@ -38,6 +38,7 @@
         right: 0;
         bottom: 60px;
         top: 0;
+        margin: 0;
         .col-7 {
           background: rgb(6,28,44);
           background: -moz-linear-gradient(-45deg,  rgba(6,28,44,1) 0%, rgba(19,47,128,1) 100%);
@@ -53,6 +54,7 @@
             content: '';
             background: url("../image/login/Accelerate-graphic.png") no-repeat;
             background-position: 100%  calc(100% - -20px);
+            background-size: 50%;
           }
         }
         
